[tool.poetry]
name = "crowd"
version = "0.1.0"
description = ""
authors = ["Dieinimy Maganha <dieinimy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.3"
folium = "^0.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
